EDSC-424: Fix alignment of leaflet cancel buttons on touch devices

--- a/app/assets/stylesheets/modules/map/map.css.scss
+++ b/app/assets/stylesheets/modules/map/map.css.scss
@@ -324,3 +324,15 @@ p.map-popup-info {
   text-align:right;
   padding-top:.2em;
 }
+
+
+// Overrides to make L.Draw cancel / undo buttons align correctly on touch
+// devices
+.leaflet-touch .leaflet-right .leaflet-draw-actions {
+  right: 34px;
+}
+
+.leaflet-touch .leaflet-draw-actions a {
+  height: 30px;
+  line-height: 30px;
+}
